--- a/index.html
+++ b/index.html
@@ -81,22 +81,22 @@
 
     <div class="row">
       <div class="feature-box col-lg-4 ">
-      <h3><i class="icon fas fa-check-circle fa-4x"></i></h3>
-      <h3>Easy to use.</h3>
-      <p class="feat">So easy to use, even your dog could do it.</p>
+        <h3><i class="icon fas fa-check-circle fa-4x"></i></h3>
+        <h3>Easy to use.</h3>
+        <p class="feat">So easy to use, even your dog could do it.</p>
       </div>
 
       <div class="feature-box col-lg-4">
-      <h3><i class="icon fas fa-bullseye fa-4x"></i></h3>
-      <h3>Elite Clientele</h3>
-      <p class="feat">We have all the dogs, the greatest dogs.</p>
+        <h3><i class="icon fas fa-bullseye fa-4x"></i></h3>
+        <h3>Elite Clientele</h3>
+        <p class="feat">We have all the dogs, the greatest dogs.</p>
       </div>
 
       <div class="feature-box col-lg-4">
-      <h3><i class="icon fas fa-heart fa-4x"></i></h3>
-      <h3>Guaranteed to work.</h3>
-      <p class="feat">Find the love of your dog's life or your money back.</p>
-    </div>
+        <h3><i class="icon fas fa-heart fa-4x"></i></h3>
+        <h3>Guaranteed to work.</h3>
+        <p class="feat">Find the love of your dog's life or your money back.</p>
+      </div>
 
 
     </div>
@@ -149,35 +149,71 @@
 
   <!-- Pricing -->
 
+
+
   <section class="pricing">
-
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
-
-
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+   <div class="pricing-text">
+     <h2>A Plan for Every Dog's Needs</h2>
+     <p>Simple and affordable price plans for your and your dog.</p>
+   </div>
 
 
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+   <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+     <div class="col">
+       <div class="card mb-4 rounded-3 shadow-sm">
+         <div class="card-header py-3">
+           <h4 class="my-0 fw-normal">Chihuahua</h4>
+         </div>
+         <div class="card-body">
+           <h1 class="card-title pricing-card-title">$0<small class="text-muted fw-light">/mo</small></h1>
+           <ul class="list-unstyled mt-3 mb-4">
+             <li>5 Matches per day</li>
+             <li>10 Messages Per Day</li>
+             <li>Unlimited App Usage</li>
+             </ul>
+           <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+         </div>
+       </div>
+     </div>
+     <div class="col">
+       <div class="card mb-4 rounded-3 shadow-sm">
+         <div class="card-header py-3">
+           <h4 class="my-0 fw-normal">Labrador</h4>
+         </div>
+         <div class="card-body">
+           <h1 class="card-title pricing-card-title">$49<small class="text-muted fw-light">/mo</small></h1>
+           <ul class="list-unstyled mt-3 mb-4">
+             <li>Unlimited Matches</li>
+             <li>Unlimited Messages</li>
+             <li>Unlimited App Usage</li>
+
+           </ul>
+           <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
+         </div>
+       </div>
+     </div>
+     <div class="col">
+       <div class="card mb-4 rounded-3 shadow-sm border-primary">
+         <div class="card-header py-3 text-white bg-primary border-primary">
+           <h4 class="my-0 fw-normal">Mastiff</h4>
+         </div>
+         <div class="card-body">
+           <h1 class="card-title pricing-card-title">$99<small class="text-muted fw-light">/mo</small></h1>
+           <ul class="list-unstyled mt-3 mb-4">
+             <li>Pirority Listing</li>
+             <li>Unlimited Matches & Messages</li>
+             <li>Unlimited App Usage</li>
+           </ul>
+           <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+         </div>
+       </div>
+     </div>
+   </div>
 
 
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+
+
+
 
   </section>
 
@@ -187,8 +223,9 @@
   <section class="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
+
 
   </section>
 
@@ -197,7 +234,7 @@
 
   <footer class="footer">
 
-    <p>© Copyright 2018 TinDog</p>
+    <p>© Copyright 2021 TinDog</p>
 
   </footer>
 
